@@ -11,7 +11,7 @@
 # Freely redistributable.  Absolutely no warranty.
 #
 # From Id: portlint.pl,v 1.64 1998/02/28 02:34:05 itojun Exp
-# $NetBSD: pkglint.pl,v 1.290 2005/09/28 09:44:42 rillig Exp $
+# $NetBSD: pkglint.pl,v 1.291 2005/09/28 14:12:38 rillig Exp $
 #
 # This version contains lots of changes necessary for NetBSD packages
 # done by:
@@ -1506,6 +1506,10 @@ sub checklines_package_Makefile($) {
 				if (length($value) > 70) {
 					$line->log_warning("COMMENT should not be longer than 70 characters.");
 				}
+			}
+
+			if ($value eq "# defined" && $varname !~ qr".*_MK$") {
+				$line->log_warning("Please use \"# empty\", \"# none\" or \"yes\" instead of \"# defined\".");
 			}
 		}
 	}
